# ChangeLog for x11-themes/crystal
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/crystal/ChangeLog,v 1.7 2004/11/09 08:40:51 voxus Exp $

*crystal-0.9.0 (09 Nov 2004)

  09 Nov 2004; Konstantin Arkhipov <voxus@gentoo.org>
  +crystal-0.9.0.ebuild:
  Version bump, closing #70190.

*crystal-0.8.0 (28 Oct 2004)

  28 Oct 2004; Konstantin Arkhipov <voxus@gentoo.org>
  -crystal-0.7.5.ebuild:
  Readded ~ppc keyword to 0.8 and unmasked on x86.  

*crystal-0.8.0 (28 Sep 2004)

  28 Sep 2004; Konstantin Arkhipov <voxus@gentoo.org>
  -crystal-0.7.7.ebuild,
  +crystal-0.8.0.ebuild:
  Version bump, closing #65357.
  0.7.7 unmasked on x86.

*crystal-0.7.7 (07 Sep 2004)

  07 Sep 2004; Konstantin Arkhipov <voxus@gentoo.org>
  +crystal-0.7.7.ebuild:
  Version bump.

  29 Aug 2004; David Holm <dholm@gentoo.org> crystal-0.7.5.ebuild:
  Added to ~ppc.

*crystal-0.7.5 (16 Aug 2004)

  16 Aug 2004; Konstantin Arkhipov <voxus@gentoo.org>
  +crystal-0.7.5.ebuild:
  Initial version.