@@ -1,6 +1,6 @@
-MD5 b70da601936797d88220f765bad0332a ChangeLog 1044
-MD5 99dde7862de4e0512dd6a9d297273b96 crystal-0.8.0.ebuild 538
-MD5 ff5f59b42258b3176367c65e8ca53ce3 crystal-0.9.0.ebuild 547
+MD5 d24a4037a4b920ea5614f1c3d1cb7390 crystal-0.9.1.ebuild 546
+MD5 18c96177591ee12dd46fec186447ff96 ChangeLog 1275
 MD5 c7905dd20e49deed0bced0499a9f714c metadata.xml 222
-MD5 319b77037d3ec6c382bae2d3b7be472e files/digest-crystal-0.8.0 72
+MD5 c72d33e625f48b7a5c487e73face20be crystal-0.9.0.ebuild 545
 MD5 4c9a61cf8c296307a0c074947b104c7d files/digest-crystal-0.9.0 72
+MD5 66fa3351a45da67dbe55b098232d44d5 files/digest-crystal-0.9.1 72
